tests/out/error/struct/field_is_immutable.out
tests/out/error/struct/field_is_immutable.in.bt:10:2 error: field `bait.tests.packages.struct_mod.Foo.c` is immutable
tests/out/error/struct/field_is_immutable.in.bt:11:2 error: field `bait.tests.packages.struct_mod.Foo.d` is immutable
tests/out/error/struct/field_is_immutable.in.bt:14:2 error: field `Spam.a` is immutable
tests/out/error/struct/field_is_immutable.in.bt:15:2 error: field `Spam.b` is immutable
